# Gravel

./: .gitignore  CMakeLists.txt  README.md  TODO.md
assets/models/SittingBaby/: baby.mtl
assets/shaders/: batch.glsl  camera.glsl  default.glsl  inst.glsl
src/: app.cpp  app.h  main.cpp
src/app/: app.cpp  main.cpp
src/app/entities/: object.cpp  object.h
src/audio/: audio_system.cpp  music_type.h
src/components/: mesh.cpp  mesh.h  transform.cpp  transform.h
src/core/: engine.cpp  event.h  input.cpp  window.cpp  window.h
src/editor/: editor.cpp  editor.h
src/engine/core/: engine.cpp
src/engine/graphics/: renderer.cpp  renderer.h  renderer2d.cpp
src/engine/math/: rand.cpp  rand.h  transform.cpp
src/engine/physics/: collider.cpp  collider.h  collision_data.h  physics_body.cpp  physics_body.h  physics_world.cpp
src/engine/resources/: material.cpp  material.h  model.cpp  resource_manager.cpp  resource_manager.h
src/engine/scenes/: object.cpp  object.h  player.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/ui/: ui_canvas.cpp  ui_canvas.h
src/graphics/: camera.cpp  camera.h  font.cpp  font.h  font_s.cpp  font_s.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  texture.cpp  texture.h
src/math/: rand.cpp  transform.cpp
src/physics/: collider.cpp  collider.h  physics_body.cpp  physics_body.h  physics_world.cpp  physics_world.h
src/resources/: font.cpp  font.h  material.cpp  material.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
src/utils/: utils.cpp  utils.h  utils_file.cpp  utils_file.h
